--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <p>tudo aquilo que você sempre quissaber sobre o mundo Tech, em um único so lugar</p>
     </header>
     <nav>
-        <a href="android.html">Home</a>
-        <a href="sites android/noticias.html">Notícias</a>
-        <a href="sites android/curiosidades.html">Curiosidades</a>
-        <a href="sites android/faleconosco.html">Fale Conosco</a>
+        <a href="index.html">Home</a>
+        <a href="noticias.html">Notícias</a>
+        <a href="curiosidades.html">Curiosidades</a>
+        <a href="faleconosco.html">Fale Conosco</a>
     </nav>
     <main>
         <article>
