--- a/faleconosco.html
+++ b/faleconosco.html
@@ -173,7 +173,7 @@ footer a:hover {
         <p>Aqui está nosso meio de contato! se precisar de qualquer ajuda e so vir aqui.</p>
     </header>
     <nav>
-        <a href="../android.html">Home</a>
+        <a href="index.html">Home</a>
     </nav>
     <main>
         <h1>NOSSO WHATSAPP</h1>
