--- a/noticias.html
+++ b/noticias.html
@@ -166,7 +166,7 @@
         <p>aqui voce verá as Atualizações atuais do Android</p>
     </header>
     <nav>
-        <a href="../android.html">Home</a>
+        <a href="index.html">Home</a>
     </nav>
     <main>
         <article>
