--- a/curiosidades.html
+++ b/curiosidades.html
@@ -166,7 +166,7 @@
         <p>Aqui está nosso meio de contato! se precisar de qualquer ajuda e so vir aqui.</p>
     </header>
     <nav>
-        <a href="../android.html">Home</a>
+        <a href="index.html">Home</a>
     </nav>
     <main>
         <h1>CURIOSIDADES SOBRE O ANDROID</h1>
