--- a/faleconosco.html
+++ b/faleconosco.html
@@ -180,11 +180,11 @@ footer a:hover {
         <h2>abaixo esta nosso whatsapp para meio de contato e suporte!</h2>
         <article>
             <picture>
-                <source media="(max-width: 320px)" srcset="../imagens/tel-p-ctt-ppp.png">
-                <source media="(max-width: 480px)" srcset="../imagens/tel-p-ctt-pp.png">
-                <source media="(max-width: 510px)" srcset="../imagens/tel-p-ctt-m.png">
-                <source media="(max-width: 936px)" srcset="../imagens/tel-p-ctt-P.png">
-                <img src="../imagens/tel-p-ctt-G.png" alt="telefone pra contato">
+                <source media="(max-width: 320px)" srcset="imagens/tel-p-ctt-ppp.png">
+                <source media="(max-width: 480px)" srcset="imagens/tel-p-ctt-pp.png">
+                <source media="(max-width: 510px)" srcset="imagens/tel-p-ctt-m.png">
+                <source media="(max-width: 936px)" srcset="imagens/tel-p-ctt-P.png">
+                <img src="imagens/tel-p-ctt-G.png" alt="telefone pra contato">
             </picture>
         </article>
     </main>
