--- a/faleconosco.html
+++ b/faleconosco.html
@@ -125,6 +125,7 @@ main article {
     display: block;
 }
 
+
 aside {
     background-color: var(--cor1);
     padding: 10px;
@@ -180,7 +181,7 @@ footer a:hover {
         <h2>abaixo esta nosso whatsapp para meio de contato e suporte!</h2>
         <article>
             <picture>
-                <source media="(max-width: 350px)" srcset="imagens/tel-p-ctt-ppp.png">
+                <source media="(max-width: 350px)" srcset="imagens/tel-p-ctt-ppp.png" class="telfon">
                 <source media="(max-width: 480px)" srcset="imagens/tel-p-ctt-pp.png">
                 <source media="(max-width: 510px)" srcset="imagens/tel-p-ctt-m.png">
                 <source media="(max-width: 936px)" srcset="imagens/tel-p-ctt-P.png">
