--- a/faleconosco.html
+++ b/faleconosco.html
@@ -181,7 +181,8 @@ footer a:hover {
         <h2>abaixo esta nosso whatsapp para meio de contato e suporte!</h2>
         <article>
             <picture>
-                <source media="(max-width: 350px)" srcset="imagens/tel-p-ctt-ppp.png" class="telfon">
+                <source media="(max-width: 330px)" srcset="imagens/tel-p-ctt-ppp.png">
+                <source media="(max-width: 350px)" srcset="imagens/tel-p-ctt-ppm.png">
                 <source media="(max-width: 480px)" srcset="imagens/tel-p-ctt-pp.png">
                 <source media="(max-width: 510px)" srcset="imagens/tel-p-ctt-m.png">
                 <source media="(max-width: 936px)" srcset="imagens/tel-p-ctt-P.png">
